--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.14/schema.json",
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
@@ -21,7 +21,8 @@
 	"css": {
 		"parser": {
 			"cssModules": true,
-			"allowWrongLineComments": true
+			"allowWrongLineComments": true,
+			"tailwindDirectives": true
 		},
 		"linter": {
 			"enabled": true
