--- a/package.json
+++ b/package.json
@@ -7,22 +7,33 @@
 		"build": "next build",
 		"start": "next start",
 		"test": "jest",
-		"test:watch": "jest --watch"
+		"test:watch": "jest --watch",
+		"type-check": "tsc --noEmit",
+		"lint": "biome check .",
+		"format": "biome check --write ."
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-slot": "^1.2.4",
 		"@reduxjs/toolkit": "^2.11.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.563.0",
 		"next": "16.1.6",
+		"next-themes": "^0.4.6",
 		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
+		"react-hook-form": "^7.71.1",
 		"react-redux": "^9.2.0",
-		"tailwind-merge": "^3.4.0"
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.4.0",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.14",
+		"@biomejs/biome": "2.3.14",
 		"@tailwindcss/postcss": "^4",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.9.1",
