--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
 		"@hookform/resolvers": "^5.2.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-radio-group": "^1.3.8",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-switch": "^1.2.6",
 		"@reduxjs/toolkit": "^2.11.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.563.0",
 		"next": "16.1.6",
 		"next-themes": "^0.4.6",
@@ -28,6 +32,7 @@
 		"react-dom": "19.2.3",
 		"react-hook-form": "^7.71.1",
 		"react-redux": "^9.2.0",
+		"redux-persist": "^6.0.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"zod": "^4.3.6"
