--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
+		"framer-motion": "^12.34.0",
 		"graphql": "^16.12.0",
 		"graphql-request": "^7.4.0",
 		"lucide-react": "^0.563.0",
 		"next": "16.1.6",
+		"next-qrcode": "^2.5.1",
 		"next-themes": "^0.4.6",
 		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"react-hook-form": "^7.71.1",
 		"react-redux": "^9.2.0",
+		"react-share": "^5.2.2",
 		"recharts": "^3.7.0",
 		"redux-persist": "^6.0.0",
 		"sonner": "^2.0.7",
