--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,23 @@
 {
-	"files.associations": {
-		"*.css": "tailwindcss"
+	"editor.defaultFormatter": "biomejs.biome",
+	"editor.formatOnSave": true,
+	"editor.codeActionsOnSave": {
+		"source.fixAll.biome": "explicit",
+		"source.organizeImports.biome": "explicit"
 	},
-	"editor.quickSuggestions": {
-		"strings": true
+	"[javascript]": {
+		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"css.validate": false
+	"[typescript]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[jsonc]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	}
 }
