--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"test:watch": "jest --watch",
 		"type-check": "tsc --noEmit",
 		"lint": "biome check .",
-		"format": "biome check --write ."
+		"format": "biome check --write .",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
@@ -50,6 +51,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.14",
+		"@commitlint/cli": "^20.4.1",
+		"@commitlint/config-conventional": "^20.4.1",
 		"@tailwindcss/postcss": "^4",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.9.1",
@@ -59,13 +62,20 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"babel-plugin-react-compiler": "1.0.0",
+		"husky": "^9.1.7",
 		"jest": "^30.2.0",
 		"jest-environment-jsdom": "^30.2.0",
+		"lint-staged": "^16.2.7",
 		"shadcn": "^3.8.4",
 		"tailwindcss": "^4",
 		"ts-jest": "^29.4.6",
 		"ts-node": "^10.9.2",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5"
+	},
+	"lint-staged": {
+		"*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
+			"biome check --write --no-errors-on-unmatched"
+		]
 	}
 }
