--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@radix-ui/react-switch": "^1.2.6",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@reduxjs/toolkit": "^2.11.2",
+		"@sentry/nextjs": "^10.39.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
